fixed right margin issue on mobile

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -5,6 +5,9 @@
   padding: 0.2em 0;
 }
 
+html, body {
+  overflow-x: hidden;
+}
 
 
 div {
